--- a/css/media.css
+++ b/css/media.css
@@ -72,4 +72,16 @@
         padding: 0 32px;
         color: #9f9f9f;
     }
+
+    .payment-method-header .img_size {
+        width: 61px;
+        height: 22px;
+    }
+    .payment-method-header li label .mar_ri {
+        margin-left: 5px;
+        width: 61px;
+        height: 22px;
+    }
 }
+
+
