--- a/css/main.css
+++ b/css/main.css
@@ -964,7 +964,7 @@ input::-webkit-inner-spin-button {
     content: '';
     display: block;
     margin-top: 2px;
-    width: 20%;
+    width: 28%;
     height: 2px;
     background: linear-gradient(192.04deg, #2272FE 0%, #8339FF 51.04%, #A700FF 100%);
     background-size: 400% 400%;
@@ -1190,6 +1190,7 @@ input::-webkit-inner-spin-button {
     width: 20px;
     height: 20px;
     top: 40%;
+    opacity: 1;
     left: 5%;
     z-index: 5;
     transition: border .25s linear;
@@ -1207,11 +1208,11 @@ input::-webkit-inner-spin-button {
     -webkit-transition: background 0.25s linear;
 }
 
-.payment-method-header input[type=radio]:checked ~ .check {
+.payment-method-header input[type=radio]:checked ~.check {
     border: 1px solid #0029FF;
 }
 
-.payment-method-header input[type=radio]:checked ~ .check::before {
+.payment-method-header input[type=radio]:checked ~.check::before {
     background: #0029FF;
 }
 
@@ -1272,6 +1273,10 @@ input::-webkit-inner-spin-button {
 .settings-box {
     display: flex;
     flex-direction: column;
+}
+
+.my-profile .settings-box:after{
+    display: none;
 }
 
 .settings-box:after {
